# distance-field

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  ear.bitmap
.github/: renovate.json
.github/workflows/: rust.yml
benches/: bench.rs
examples/: generator.rs
src/: dfield_generator.c  dfield_renderer.c  lib.rs
