[package]
name = "distance-field"
version = "0.1.2"
description = "Generate distance fields from images for game-dev"
readme = "README.md"
license = "GPL-3.0"
keywords = ["image", "SDF", "gamedev"]
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
repository = "https://github.com/tversteeg/distance-field.git"
homepage = "https://github.com/tversteeg/distance-field"

[badges]
travis-ci = {repository = "tversteeg/distance-field"}

[dependencies]
spiral = "0.1"
image = "0.18"

[[example]]
name = "generator"
path = "examples/generator.rs"

[dev-dependencies]
docopt = "0.8"
