[package]
name = "distance-field"
version = "0.1.8"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/distance-field"
edition = "2021"

readme = "README.md"
description = "Generate distance fields from images for pseudo-vector rendering"
documentation = "https://docs.rs/distance-field"

repository = "https://github.com/tversteeg/distance-field.git"
keywords = ["image", "SDF", "gamedev", "vector"]
categories = ["games", "rendering", "game-engines", "multimedia"]

[badges]
travis-ci = {repository = "tversteeg/distance-field"}

[dependencies]
spiral = "0.2.0"
image = "0.24.4"
bitvec = "1.0.1"

[dev-dependencies]
pprof = { version = "0.10.1", features = ["flamegraph", "criterion"] }
criterion = { version = "0.3.6", default-features = false }
docopt = "1.1.1"

[[example]]
name = "generator"
path = "examples/generator.rs"

[[bench]]
name = "bench"
harness = false
